[package]
name = "sigma"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
lazy_static = "1.4.0"
message-io = "0.14.6"
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
