[package]
name = "sigma"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
lazy_static = "1.4.0"
message-io = "0.14.6"
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
capnp = "0.15.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
opentelemetry = "0.18.0"
tracing-subscriber = "0.3.16"
opentelemetry-otlp = "0.11.0"

[build-dependencies]
capnpc = "0.15.0"
